# Thesis

./: CMakeLists.txt  main.cpp
Fabrizio/: importFiles.cpp  importFiles.h
resources/: celFragment.frag  celVertex.vert  fragmentShader.frag  fragmentShader2.frag  fragmentWireframe.frag  geometryWireframe.geom  vertexShader.vert  vertexShader2.vert  vertexWireframe.vert
src/: CalculateNormals.h  MatricesInitializer.h  MeshMatricesInitializer.h  VectorsOperations.h  vectorsOperations.h
src/shader/: fragmentShader.frag  vertexShader.vert
